--- a/emacs.org
+++ b/emacs.org
@@ -797,6 +797,12 @@ other news-reading utility.
           (elfeed-show-untag tag)
           (elfeed-show-tag tag)))
 
+      (defun sf/elfeed-update ()
+        "Update elfeed database"
+        (message "Updating elfeed articles...")
+        (elfeed-update)
+        )
+
       (defface elfeed-search-starred-title-face
         '((t :foreground "#f77"))
         "Marks a starred Elfeed entry.")
@@ -830,7 +836,7 @@ other news-reading utility.
            )
         url-queue-timeout 30
         elfeed-db-directory (concat user-emacs-directory "user/elfeed")
-        elfeed-update-timer (run-at-time 180 (* 120 60) 'elfeed-update) ; create timer to update elfeed
+        elfeed-update-timer (run-at-time 180 (* 120 60) 'sf/elfeed-update) ; create timer to update elfeed
         )
       (dolist (mode '(elfeed-show-mode elfeed-search-mode))
         (evil-set-initial-state mode 'emacs))
